src/assets/css/style.css
/* ... */
.social-style-one a:hover {
    color: var(--black-color);
    background: var(--primary-color);
}

.social-style-two {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    margin-left: -12px;
    margin-right: -12px;
}

.social-style-two a {
    color: rgba(255, 255, 255, 0.35);
    margin-left: 12px;
    margin-right: 12px;
}

.social-style-two a:hover {
    color: var(--primary-color);
}


.pagination {
    -webkit-box-align: center;
    -ms-flex-align: center;
    -ms-grid-row-align: center;
    align-items: center;
    margin-left: -15px;
    margin-right: -15px;
}

.pagination li {
    margin: 10px 15px 0;
}

.pagination li a,
.pagination li .page-link {
    padding: 0;
    border: none;
    font-size: 24px;
    box-shadow: none;
    font-weight: 600;
    color: var(--main-color);
    background: transparent;
}

.pagination li.active .page-link,
.pagination li:hover:not(.disabled) .page-link {
    background: transparent;
    color: var(--primary-color);
}

.ratting {
    line-height: 1;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    margin-left: -5px;
    margin-right: -5px;
}

.ratting i {
    margin: 5px;
    color: var(--crimson);
}

.arrow {
    width: 40px;
    height: 40px;
    color: var(--parchment);
    -webkit-transition: 0.5s;
    transition: 0.5s;
    line-height: 40px;
    border-radius: 50%;
    background: var(--primary-color);
    border: 1px solid var(--button-border);
}

.arrow:focus,
.arrow:hover {
    color: var(--parchment);
    background: transparent;
    border-color: var(--primary-color);
}

.slider-arrows button:first-child {
    margin-right: 5px;
}

.slider-arrows button:last-child {}

/*** swiper Dots ***/
.swiper-pagination {
    display: flex;
    align-items: center;
    gap: 10px;
}

.swiper-pagination-bullet {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.swiper-pagination-bullet {
    position: relative;
    cursor: pointer;
    margin: 8px;
    width: 6px;
    height: 6px;
    opacity: 0.3;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
    -webkit-transition: 0.5s;
    transition: 0.5s;
    border-radius: 50%;
    background: var(--ash);
}

.swiper-pagination-bullet {
    opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    height: 0;
}

.swiper-pagination-bullet:before {
    content: '';
    width: 0;
    height: 0;
    left: 50%;
    top: 50%;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    border-radius: 50%;
    position: absolute;
    border: 1px solid var(--primary-color);
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.swiper-pagination-bullet-active {
    background: var(--primary-color);
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
}

.swiper-pagination-bullet-active:before {
    width: 21px;
    height: 21px;
}

.before-after-none:after,
.before-after-none:before {
    display: none;
}

.text-white *,
.text-white a,
.text-white .count-text,
.text-white .footer-newsletter-content .sub-title {
    color: white;
}

.text-white li li .dropdown-btn span {
    color: var(--heading-color);
}

.text-white .copyright-area p {
    opacity: 0.5;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
}

.text-white .copyright-area a {
    opacity: 0.5;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
}

.text-white .copyright-area a:hover {
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
}

.banner-inner h1 {
    font-size: 75px;
    font-weight: 500;
    margin-bottom: 16px;
    text-transform: capitalize;
}

.banner-inner h3 {
    margin-bottom: 20px;
}



.breadcrumb {
    padding: 0;
    margin: 0;
    font-size: 18px;
    background: transparent;
    text-transform: capitalize;
}



.breadcrumb .breadcrumb-item {
    padding: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.breadcrumb .breadcrumb-item a {
    color: white;
}

.breadcrumb .breadcrumb-item.active {
    color: var(--primary-color);
    text-decoration: underline;
}

.breadcrumb .breadcrumb-item+.breadcrumb-item:before {
    margin-left: 20px;
    margin-right: 20px;
    -webkit-box-flex: 0;
    -ms-flex: none;
    flex: none;
    content: "";
    width: 5px;
    height: 5px;
    padding-right: 0;
    border-radius: 50%;
    background: white;
}


.innerpage-area {
    padding-top: 150px;
    padding-bottom: 30px;
}


.innerpage-area h2 {
    font-size: 50px;
    text-align: center;
    text-transform: uppercase;
}

.innerpage-single-area {
    padding-top: 115px !important;
}

/*
* ----------------------------------------------------------------------------------------
* 03.MENU CSS STYLE
* ----------------------------------------------------------------------------------------
*/
#lightonoff {
    width: 30px;
    cursor: pointer;
}

.main-header {
    position: relative;
    left: 0px;
    top: 0px;
    z-index: 999;
    width: 100%;
    -webkit-transition: all 500ms ease;
    transition: all 500ms ease;
}

.main-header .container-fluid {
    padding-left: 25px;
    padding-right: 25px;
}

.fixed-header .header-inner {
    padding: 10px 0px;
    -webkit-transition: all 500ms ease;
    transition: all 500ms ease;
    border-bottom: 1px solid rgba(119, 119, 125, .2);
}
/* ... */

